[package]
name = "dht_kad_rs"
version = "0.1.0"
authors = ["divyank"]
edition = "2018"

[dependencies]
log = "0.4"
color-backtrace = { version = "0.1" }
pretty_env_logger = "0.3"
tarpc-bincode-transport = {git= "https://github.com/google/tarpc", branch="master"}
clap = "2.0"
futures-preview = { version = "0.3.0-alpha.18" }
serde = { version = "1.0", features = ["derive"] }
tarpc = {git= "https://github.com/google/tarpc", branch="master" , features = ["serde1"]}
tokio = { version = "0.2.0-alpha.2" }
rand = "0.6.5"
protobuf = {git= "https://github.com/stepancheg/rust-protobuf", features= ["with-serde"]}
fasthash = "0.4.0"

[lib]
name = "dht"
path = "src/lib.rs"

[[bin]]
name = "testbed"
path = "testbed/src/main.rs"

[workspace]
members = [
    "testbed",
]
