[package]
name = "testbed"
version = "0.1.0"
authors = ["divyank"]
edition = "2018"

[dependencies]
log = "0.4"
color-backtrace = { version = "0.1" }
pretty_env_logger = "0.3"
clap = "2.0"
futures-preview = { version = "0.3.0-alpha.18" }
tokio = { version = "0.2.0-alpha.2" }
dht_kad_rs = {version = "0.1", path= "../"}
rand = "0.6.5"

[[bin]]
name = "testbed"
path = "src/main.rs"
